--- a/page.css
+++ b/page.css
@@ -57,6 +57,22 @@ body {
 	overflow: auto;
 }
 
+#right hr {
+	border: 0px;
+	height: 1px;
+	width: calc(100% - 30px);
+	background-color: #833;
+	box-shadow: 0px 0px 4px #833;
+}
+
+#right a {
+	color: #aaa;
+}
+
+#right a:hover {
+	color: #ccc;
+}
+
 #step {
 	padding-top: 20px;
 	text-align: center;
@@ -64,14 +80,6 @@ body {
 	font-size: 50px;
 	font-weight: bold;
 	text-shadow: 0px 0px 7px #a66;
-}
-
-#right hr {
-	border: 0px;
-	height: 1px;
-	width: calc(100% - 30px);
-	background-color: #833;
-	box-shadow: 0px 0px 4px #833;
 }
 
 #inst-container {
@@ -97,8 +105,11 @@ body {
 }
 
 .why-expl {
-	padding: 5px 5px 5px 5px;
 	display: none;
+}
+
+.why-expl, .example-box {
+	padding: 5px 5px 5px 5px;
 	background-color: rgba(0, 0, 0, 0.1);
 	border-radius: 10px;
 	margin-top: 5px;
