--- a/page.css
+++ b/page.css
@@ -3,6 +3,10 @@ body {
 	font-family: 'Lucida Console';
 }
 
+a {
+	color: #aaa;
+}
+
 #left {
 	position: absolute;
 	height: 100%;
@@ -63,10 +67,6 @@ body {
 	width: calc(100% - 30px);
 	background-color: #833;
 	box-shadow: 0px 0px 4px #833;
-}
-
-#right a {
-	color: #aaa;
 }
 
 #right a:hover {
